src/P9Parser/ProcessingParser.ts
// Generated from ./src/P9Parser/ProcessingParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ProcessingParserListener } from "./ProcessingParserListener";

export class ProcessingParser extends Parser {
	public static readonly LBRACK = 1;
	public static readonly RBRACK = 2;
	public static readonly ASSIGN = 3;
	public static readonly CATCH = 4;
	public static readonly CLASS = 5;
	public static readonly COMMA = 6;
	public static readonly COMMENT = 7;
	public static readonly LBRACE = 8;
	public static readonly RBRACE = 9;
	public static readonly DOC_COMMENT = 10;
	public static readonly DOT = 11;
	public static readonly EXTENDS = 12;
	public static readonly FINAL = 13;
	public static readonly IMPLEMENTS = 14;
	public static readonly IMPORT = 15;
	public static readonly BLOCK_COMMENT = 16;
	public static readonly NEW = 17;
	public static readonly LPAREN = 18;
	public static readonly RPAREN = 19;
	public static readonly PRIVATE = 20;
	public static readonly PUBLIC = 21;
	public static readonly RETURN = 22;
	public static readonly SEMI = 23;
	public static readonly STATIC = 24;
	public static readonly SUPER = 25;
	public static readonly THIS = 26;
	public static readonly TRY = 27;
	public static readonly VOID = 28;
	public static readonly BOOLEAN = 29;
	public static readonly BYTE = 30;
	public static readonly CHAR = 31;
	public static readonly COLOR = 32;
	public static readonly DOUBLE = 33;
	public static readonly FLOAT = 34;
	public static readonly INT = 35;
	public static readonly LONG = 36;
	public static readonly EQUALS = 37;
	public static readonly EQUAL = 38;
	public static readonly GT = 39;
	public static readonly GE = 40;
	public static readonly NOTEQUAL = 41;
	public static readonly LT = 42;
	public static readonly LE = 43;
	public static readonly FOR = 44;
	public static readonly WHILE = 45;
	public static readonly DO = 46;
	public static readonly BREAK = 47;
	public static readonly CASE = 48;
	public static readonly QUESTION = 49;
	public static readonly COLON = 50;
	public static readonly CONTINUE = 51;
	public static readonly DEFAULT = 52;
	public static readonly ELSE = 53;
	public static readonly IF = 54;
	public static readonly SWITCH = 55;
	public static readonly AND = 56;
	public static readonly BANG = 57;
	public static readonly OR = 58;
	public static readonly ADD_ASSIGN = 59;
	public static readonly ADD = 60;
	public static readonly DEC = 61;
	public static readonly DIV = 62;
	public static readonly DIV_ASSIGN = 63;
	public static readonly INC = 64;
	public static readonly SUB = 65;
	public static readonly MOD = 66;
	public static readonly MUL = 67;
	public static readonly MUL_ASSIGN = 68;
	public static readonly SUB_ASSIGN = 69;
	public static readonly BITAND = 70;
	public static readonly BITOR = 71;
	public static readonly L_SHIFT = 72;
	public static readonly R_SHIFT = 73;
	public static readonly THROWS = 74;
	public static readonly THROW = 75;
	public static readonly INSTANCEOF = 76;
	public static readonly ABSTRACT = 77;
	public static readonly DECIMAL_LITERAL = 78;
	public static readonly HEX_LITERAL = 79;
	public static readonly FLOAT_LITERAL = 80;
	public static readonly COLOR_LITERAL = 81;
	public static readonly BOOL_LITERAL = 82;
	public static readonly CHAR_LITERAL = 83;
	public static readonly STRING_LITERAL = 84;
	public static readonly NULL_LITERAL = 85;
	public static readonly IDENTIFIER = 86;
	public static readonly WS = 87;
	public static readonly RULE_compilationUnit = 0;
	public static readonly RULE_importDeclaration = 1;
	public static readonly RULE_qualifiedName = 2;
	public static readonly RULE_varDecl = 3;
	public static readonly RULE_modifier = 4;
	public static readonly RULE_variableDeclarators = 5;
	public static readonly RULE_variableDeclarator = 6;
	public static readonly RULE_variableDeclaratorId = 7;
	public static readonly RULE_variableInitializer = 8;
	public static readonly RULE_arrayInitializer = 9;
	public static readonly RULE_funcDecl = 10;
	public static readonly RULE_typeOrVoid = 11;
	public static readonly RULE_type = 12;
	public static readonly RULE_primitiveType = 13;
	public static readonly RULE_classType = 14;
	public static readonly RULE_typeArguments = 15;
	public static readonly RULE_formalParameters = 16;
	public static readonly RULE_formalParameterList = 17;
	public static readonly RULE_formalParameter = 18;
	public static readonly RULE_qualifiedNameList = 19;
	public static readonly RULE_block = 20;
	public static readonly RULE_blockStatement = 21;
	public static readonly RULE_classDecl = 22;
	public static readonly RULE_classModifier = 23;
	public static readonly RULE_typeParameters = 24;
	public static readonly RULE_typeParameter = 25;
	public static readonly RULE_typeBound = 26;
	public static readonly RULE_typeList = 27;
	public static readonly RULE_classBody = 28;
	public static readonly RULE_classBodyDeclaration = 29;
	public static readonly RULE_abstractMethodDeclaration = 30;
	public static readonly RULE_memberDeclaration = 31;
	public static readonly RULE_genericMethodDeclaration = 32;
	public static readonly RULE_constructorDeclaration = 33;
	public static readonly RULE_genericConstructorDeclaration = 34;
	public static readonly RULE_statement = 35;
	public static readonly RULE_forControl = 36;
	public static readonly RULE_forInit = 37;
	public static readonly RULE_expressionList = 38;
	public static readonly RULE_enhancedForControl = 39;
	public static readonly RULE_catchClause = 40;
	public static readonly RULE_catchType = 41;
	public static readonly RULE_switchBlockStatementGroup = 42;
	public static readonly RULE_switchLabel = 43;
	public static readonly RULE_expression = 44;
	public static readonly RULE_primary = 45;
	public static readonly RULE_literal = 46;
	public static readonly RULE_nonWildcardTypeArguments = 47;
	public static readonly RULE_superSuffix = 48;
	public static readonly RULE_explicitGenericInvocationSuffix = 49;
	public static readonly RULE_arguments = 50;
	public static readonly RULE_funcCall = 51;
	public static readonly RULE_creator = 52;
	public static readonly RULE_createdName = 53;
	public static readonly RULE_createdNameUnit = 54;
	public static readonly RULE_typeArgumentsOrDiamond = 55;
	public static readonly RULE_arrayCreatorRest = 56;
	public static readonly RULE_classCreatorRest = 57;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"compilationUnit", "importDeclaration", "qualifiedName", "varDecl", "modifier", 
		"variableDeclarators", "variableDeclarator", "variableDeclaratorId", "variableInitializer", 
		"arrayInitializer", "funcDecl", "typeOrVoid", "type", "primitiveType", 
		"classType", "typeArguments", "formalParameters", "formalParameterList", 
		"formalParameter", "qualifiedNameList", "block", "blockStatement", "classDecl", 
		"classModifier", "typeParameters", "typeParameter", "typeBound", "typeList", 
		"classBody", "classBodyDeclaration", "abstractMethodDeclaration", "memberDeclaration", 
		"genericMethodDeclaration", "constructorDeclaration", "genericConstructorDeclaration", 
		"statement", "forControl", "forInit", "expressionList", "enhancedForControl", 
		"catchClause", "catchType", "switchBlockStatementGroup", "switchLabel", 
		"expression", "primary", "literal", "nonWildcardTypeArguments", "superSuffix", 
		"explicitGenericInvocationSuffix", "arguments", "funcCall", "creator", 
		"createdName", "createdNameUnit", "typeArgumentsOrDiamond", "arrayCreatorRest", 
		"classCreatorRest",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'['", "']'", "'='", "'catch'", "'class'", "','", undefined, 
		"'{'", "'}'", undefined, "'.'", "'extends'", "'final'", "'implements'", 
		"'import'", undefined, "'new'", "'('", "')'", "'private'", "'public'", 
		"'return'", "';'", "'static'", "'super'", "'this'", "'try'", "'void'", 
		"'boolean'", "'byte'", "'char'", "'color'", "'double'", "'float'", "'int'", 
		"'long'", "'equals'", "'=='", "'>'", "'>='", "'!='", "'<'", "'<='", "'for'", 
		"'while'", "'do'", "'break'", "'case'", "'?'", "':'", "'continue'", "'default'", 
		"'else'", "'if'", "'switch'", "'&&'", "'!'", "'||'", "'+='", "'+'", "'--'", 
		"'/'", "'/='", "'++'", "'-'", "'%'", "'*'", "'*='", "'-='", "'&'", "'|'", 
		"'<<'", "'>>'", "'throws'", "'throw'", "'instanceof'", "'abstract'", undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "'null'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "LBRACK", "RBRACK", "ASSIGN", "CATCH", "CLASS", "COMMA", "COMMENT", 
		"LBRACE", "RBRACE", "DOC_COMMENT", "DOT", "EXTENDS", "FINAL", "IMPLEMENTS", 
		"IMPORT", "BLOCK_COMMENT", "NEW", "LPAREN", "RPAREN", "PRIVATE", "PUBLIC", 
		"RETURN", "SEMI", "STATIC", "SUPER", "THIS", "TRY", "VOID", "BOOLEAN", 
		"BYTE", "CHAR", "COLOR", "DOUBLE", "FLOAT", "INT", "LONG", "EQUALS", "EQUAL", 
		"GT", "GE", "NOTEQUAL", "LT", "LE", "FOR", "WHILE", "DO", "BREAK", "CASE", 
		"QUESTION", "COLON", "CONTINUE", "DEFAULT", "ELSE", "IF", "SWITCH", "AND", 
		"BANG", "OR", "ADD_ASSIGN", "ADD", "DEC", "DIV", "DIV_ASSIGN", "INC", 
		"SUB", "MOD", "MUL", "MUL_ASSIGN", "SUB_ASSIGN", "BITAND", "BITOR", "L_SHIFT", 
		"R_SHIFT", "THROWS", "THROW", "INSTANCEOF", "ABSTRACT", "DECIMAL_LITERAL", 
		"HEX_LITERAL", "FLOAT_LITERAL", "COLOR_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", 
		"STRING_LITERAL", "NULL_LITERAL", "IDENTIFIER", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ProcessingParser._LITERAL_NAMES, ProcessingParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ProcessingParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "ProcessingParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return ProcessingParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ProcessingParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ProcessingParser._ATN, this);
	}
	// @RuleVersion(0)
	public compilationUnit(): CompilationUnitContext {
		let _localctx: CompilationUnitContext = new CompilationUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ProcessingParser.RULE_compilationUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ProcessingParser.IMPORT) {
				{
				{
				this.state = 116;
				this.importDeclaration();
				}
				}
				this.state = 121;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 126;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 126;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
				case 1:
					{
					this.state = 122;
					this.varDecl();
					}
					break;

				case 2:
					{
					this.state = 123;
					this.funcDecl();
					}
					break;

				case 3:
					{
					this.state = 124;
					this.statement();
					}
					break;

				case 4:
					{
					this.state = 125;
					this.classDecl();
					}
					break;
				}
				}
				this.state = 128;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ProcessingParser.CLASS) | (1 << ProcessingParser.LBRACE) | (1 << ProcessingParser.FINAL) | (1 << ProcessingParser.NEW) | (1 << ProcessingParser.LPAREN) | (1 << ProcessingParser.PRIVATE) | (1 << ProcessingParser.PUBLIC) | (1 << ProcessingParser.RETURN) | (1 << ProcessingParser.SEMI) | (1 << ProcessingParser.STATIC) | (1 << ProcessingParser.SUPER) | (1 << ProcessingParser.THIS) | (1 << ProcessingParser.TRY) | (1 << ProcessingParser.VOID) | (1 << ProcessingParser.BOOLEAN) | (1 << ProcessingParser.BYTE) | (1 << ProcessingParser.CHAR))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (ProcessingParser.COLOR - 32)) | (1 << (ProcessingParser.DOUBLE - 32)) | (1 << (ProcessingParser.FLOAT - 32)) | (1 << (ProcessingParser.INT - 32)) | (1 << (ProcessingParser.LONG - 32)) | (1 << (ProcessingParser.LT - 32)) | (1 << (ProcessingParser.FOR - 32)) | (1 << (ProcessingParser.WHILE - 32)) | (1 << (ProcessingParser.DO - 32)) | (1 << (ProcessingParser.BREAK - 32)) | (1 << (ProcessingParser.CONTINUE - 32)) | (1 << (ProcessingParser.IF - 32)) | (1 << (ProcessingParser.SWITCH - 32)) | (1 << (ProcessingParser.BANG - 32)) | (1 << (ProcessingParser.ADD - 32)) | (1 << (ProcessingParser.DEC - 32)))) !== 0) || ((((_la - 64)) & ~0x1F) === 0 && ((1 << (_la - 64)) & ((1 << (ProcessingParser.INC - 64)) | (1 << (ProcessingParser.SUB - 64)) | (1 << (ProcessingParser.THROW - 64)) | (1 << (ProcessingParser.ABSTRACT - 64)) | (1 << (ProcessingParser.DECIMAL_LITERAL - 64)) | (1 << (ProcessingParser.HEX_LITERAL - 64)) | (1 << (ProcessingParser.FLOAT_LITERAL - 64)) | (1 << (ProcessingParser.COLOR_LITERAL - 64)) | (1 << (ProcessingParser.BOOL_LITERAL - 64)) | (1 << (ProcessingParser.CHAR_LITERAL - 64)) | (1 << (ProcessingParser.STRING_LITERAL - 64)) | (1 << (ProcessingParser.NULL_LITERAL - 64)) | (1 << (ProcessingParser.IDENTIFIER - 64)))) !== 0));
			this.state = 130;
			this.match(ProcessingParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importDeclaration(): ImportDeclarationContext {
		let _localctx: ImportDeclarationContext = new ImportDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ProcessingParser.RULE_importDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 132;
			this.match(ProcessingParser.IMPORT);
			this.state = 133;
			this.qualifiedName();
			this.state = 136;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ProcessingParser.DOT) {
				{
				this.state = 134;
				this.match(ProcessingParser.DOT);
				this.state = 135;
				this.match(ProcessingParser.MUL);
				}
			}

			this.state = 138;
			this.match(ProcessingParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public qualifiedName(): QualifiedNameContext {
		let _localctx: QualifiedNameContext = new QualifiedNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ProcessingParser.RULE_qualifiedName);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 140;
			this.match(ProcessingParser.IDENTIFIER);
			this.state = 145;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 141;
					this.match(ProcessingParser.DOT);
					this.state = 142;
					this.match(ProcessingParser.IDENTIFIER);
					}
					}
				}
				this.state = 147;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varDecl(): VarDeclContext {
		let _localctx: VarDeclContext = new VarDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ProcessingParser.RULE_varDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ProcessingParser.FINAL) | (1 << ProcessingParser.PRIVATE) | (1 << ProcessingParser.PUBLIC) | (1 << ProcessingParser.STATIC))) !== 0)) {
				{
				{
				this.state = 148;
				this.modifier();
				}
				}
				this.state = 153;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 154;
			this.type();
			this.state = 155;
			this.variableDeclarators();
			this.state = 156;
			this.match(ProcessingParser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public modifier(): ModifierContext {
		let _localctx: ModifierContext = new ModifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ProcessingParser.RULE_modifier);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 158;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ProcessingParser.FINAL) | (1 << ProcessingParser.PRIVATE) | (1 << ProcessingParser.PUBLIC) | (1 << ProcessingParser.STATIC))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclarators(): VariableDeclaratorsContext {
		let _localctx: VariableDeclaratorsContext = new VariableDeclaratorsContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ProcessingParser.RULE_variableDeclarators);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 160;
			this.variableDeclarator();
			this.state = 165;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ProcessingParser.COMMA) {
				{
				{
				this.state = 161;
				this.match(ProcessingParser.COMMA);
				this.state = 162;
				this.variableDeclarator();
				}
				}
				this.state = 167;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public variableDeclarator(): VariableDeclaratorContext {
		let _localctx: VariableDeclaratorContext = new VariableDeclaratorContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, ProcessingParser.RULE_variableDeclarator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this.variableDeclaratorId();
			this.state = 171;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ProcessingParser.ASSIGN) {
				{
				this.state = 169;
				this.match(ProcessingParser.ASSIGN);
				this.state = 170;
				this.variableInitializer();
				}
			}
